--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="row Movies">
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/Aladdin/Aladdin.html"><img
+                        <div class="col-6"><a href="Aladdin/Aladdin.html"><img
                                     src="Images/EnglishMoviesImages/Aladdin.jpg"></a></div>
                         <div class="col-6"><a href="Movies/AntMan/AntMan.html"><img
                                     src="Images/EnglishMoviesImages/AntMan.jpg"></a></div>
